--- a/Encriptador/css/style.css
+++ b/Encriptador/css/style.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 :root{
   --color-texto:#052051;
   --color-primario:#F3F5FC;
@@ -5,48 +10,54 @@
   --color-terciario:#757FB2;
 }
 html {
-  font-size: 10px;
+  font-size: 12px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  
 }
 body {
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   color: var(--color-texto);
-  background-color: var(--color-primario);
+  background-image: linear-gradient(rgba(235, 235, 235, 0.5), rgba(43, 42, 100, 0.5)),
+                    url(../img/fondo.jpg);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain;
 }
 h1{
-  font-size: 3.2rem;
   margin-bottom: 2rem;
 }
 h2 {
-  font-size: 2.5rem; 
   margin-bottom: 2rem;
 }
-
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5rem ;
   
 }
-header {
-  align-self: flex-start;
+.container > header {
+  margin-bottom: 2rem;
 }
-main {
-  min-width: 50vw;
-  height: 50%;
+.container > main {
+  max-width: 80vw;
+  min-height: 75vh;
 }
-footer {
-  margin-top: 2rem;
+.container > footer {
+  height: 15rem;
+  color: var(--color-secundario);
+  margin-top: 5rem;
  }
-#botones{
+
+ #botones{
   display: flex;
-  margin-bottom: 3rem;
+  
 }
 .boton {
-  display: inline-flex;
   align-items: center;
   font-size: 1.6rem;
-  padding: 1rem 2rem;
   cursor: pointer;
   border: 0px;
   border-right: 1px solid var(--color-secundario);
@@ -60,14 +71,15 @@ footer {
   border: 0;
   font-size: 1.8rem;
   padding: 1.5rem;
-  margin-top: 1.5rem;
+  height: 12rem;
   resize: none;
-  background-color: var(--color-secundario);
-  border-top: 1px solid var(--color-terciario);
+  opacity: .8;
+  background-color: var(--color-secundario );
   outline: none;
   width: 60%;
   max-width: 60rem;
-  height: 8rem;
+  box-shadow: -2px 4px 6px var(--color-terciario);
+  
 }
 .oculto {
   visibility: hidden;
@@ -80,6 +92,7 @@ footer {
   background: rgba(0, 0, 0, 0.08);
 }
 #aviso{
+  font-size:1.8rem;
   padding: 0.5rem 1rem;
   color: #ffffff;
   background-color: var(--color-terciario);
@@ -95,12 +108,20 @@ footer {
 }
 
 @media only screen and (max-width: 600px) {
- .boton{
+  body {
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .botones{
+    flex-direction: column;
+  }
+  .boton{
   padding: .5rem 1rem;
   font-size: 1.2rem; 
  }
  .mensaje{
-  min-width: 72vw;
+  width: 317px;
+  min-width: 80vw;
   font-size: 1.5rem;
  } 
  #aviso{
@@ -108,7 +129,13 @@ footer {
  }
 }
 @media only screen and (min-width: 600px){
-   .mensaje{
-    width: 72vw;
-   } 
-  }
+  .boton{
+    display: inline-flex;
+  padding: .5rem 1rem;
+  font-size: 1.2rem; 
+  } 
+  .mensaje{
+  width: 70vw;
+  
+  } 
+}
